# myWorks

./: .gitignore
Aseban SkyWatcher/Aseban SkyWatcher/: Aseban SkyWatcher.cpp  Aseban SkyWatcher.h  CMakeLists.txt
AsebanSkyWatch/: AsebanSkyWatch.cpp  AsebanSkyWatch.h  CMakeLists.txt
KarFarmaProjectWebApp/: KarFarmaProjectWebApp.csproj.Backup.tmp  KarFarmaProjectWebApp.sln
KarFarmaProjectWebApp/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml  Privacy.cshtml.cs  _ViewImports.cshtml
KarFarmaProjectWebApp/Pages/Shared/: _Layout.cshtml
KarFarmaProjectWebApp/Properties/: launchSettings.json
RazorPagesMovie/: RazorPagesMovie.sln
RazorPagesMovie/Migrations/: 20241207154719_InitialCreate.Designer.cs
RazorPagesMovie/Properties/: launchSettings.json
